styles.css
html {
  font-family: "Story Script", Arial, Helvetica, sans-serif;
}

body{
  margin: 0;
  overflow: hidden;
}

.left-side{
  display: flex;
  flex-direction: column;
  background-image: url("images/booksImage.jpg");
  background-size: 100% 100%;
  height: 100vh;
  min-width: 50vw;
}

.left-side > h1{
  margin-top: auto;
  text-align: center;
  font-size: large;
  word-spacing: 2px;
}

.main{
  display: flex;
  flex-direction: row;
}

.right-side{
  display: flex;
  flex-direction: column;
  min-width: 50vw;
  background-color: whitesmoke;
}

.right-side > h1:first-of-type{
  height: 35vh;
  margin: 0;
  display: flex;
  align-items: center;
  box-sizing:border-box;
  padding: 20px;
}

.right-side > form{
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  background-color: white;
  box-sizing: border-box;
  padding: 20px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.input-container{
  display: flex;
  flex-direction: column;
}

.input-container > input{
  width: fit-content;
  border-radius: 5px;
  height: 20px;
  border: 1px solid #B1B3C1;
}

.input-container > input:focus{
  outline: none;
  border: 1px solid #77798a;
}

.input-container > input:user-invalid{
  border: 1px solid red;
}

form > h1{
  width: fit-content;
  margin-left: 10px;
}

button:hover{
  background-color: #8b8da0;
  cursor: pointer;
}

button{
  box-sizing: border-box;
  height: 40px;
  width: 150px;
  padding: 5px;
  border-radius: 5px;
  margin: 10px;
  background-color: #B1B3C1;
  color: white;
  border: none;
  font-weight: bolder;
}

.input-group{
  display: flex; 
  flex-direction: row; 
  gap: 64px; 
  margin: 10px;
}

.right-side > h1:last-of-type{
  margin-left: 30px;
  margin-top: 16px;
  font-size: larger;
}

